--- a/index.html
+++ b/index.html
@@ -12,24 +12,23 @@
     <div class="grid-2">
         <div class="section-1">
             <i class="fas fa-code fa-5x white"></i>
-            <h2>FirstName LastName</h2>
-            <p>City,Country.</p>
+            <h2>DevonNekoAC</h2>
+            <p>Dev does Animal Crossing</p>
             <a href="#"><i class="fab fa-twitter"></i></a>
             <a href="#"><i class="fab fa-github"></i></a>
         </div>
         <div class="section-2">
             <h2>About</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quas sint et nihil iusto eius nostrum sit error, repellat optio quisquam! Magnam dolore iusto cumque. Nostrum error iste neque maiores.</p>
-            <h2>Skills</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis in maiores autem quidem obcaecati excepturi! Cupiditate eaque itaque magni voluptatibus neque nobis est dolor? Atque sunt minus ipsa asperiores. At.</p>
-            <h2>Projects</h2>
-            <a href="#">Project 1</a>
-            <a href="#">Project 2</a>
-            <a href="#">Project 3</a>
-            <a href="#">Project 4</a>
-            <a href="#">Project 5</a>
+            <p>Just a clever cat playing on her Switch, trying to find her way in a world full of unique and amazing islands!</p>
+            <h2>Reaching Dev</h2>
+            <p>You can find me on social media and places like Nookazon using the links below! =^_^=</p>
+            <h2>Where is Dev?</h2>
+            <a href="https://nookazon.com/profile/198713466/">Nookazon</a>
+            <a href="https://twitter.com/DevonNekoAC">Twitter</a>
+            <a href="https://discord.com/users/709097342862884874">Discord - Dev#3665</a>
+            <a href="https://stalks.io/u/devonnekoac">Stalks.io</a>
             <h2>Contact</h2>
-            <p>myEmail@email.com</p>
+            <p>hello@devonnekoac.com</p>
         </div>
     </div>
 </body>
